--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -13,15 +13,15 @@ carry only summaries.
 == Known Issues ==
 
   * When the app is used soon after waking up the phone, I frequently get
-    SocketException timeouts. It ought to retry and/or check network
-    availability (seems slightly tricky though). Even when successful,
-    first network request takes disproportionately long.
+!SocketException timeouts. It ought to retry and/or check network
+availability (seems slightly tricky though). Even when successful,
+first network request takes disproportionately long.
   * eSpeak mishandles french accents. In other contexts where
-    I've used eSpeak this has always worked fine, so it's either this
-    version or the way it's built or some encoding problem...
+I've used eSpeak this has always worked fine, so it's either this
+version or the way it's built or some encoding problem...
   * SSML doesn't work for some reason.
-  * I see no convenient way to make the settings (PreferenceActivity)
-    self-voicing.
+  * I see no convenient way to make the settings (!PreferenceActivity)
+self-voicing.
 
 == Speech-related ideas ==
 
@@ -29,7 +29,7 @@ carry only summaries.
   * Make prosody work and use it to denote titles / styles / other markup.
   * Control to navigate to previous/next paragraph, and to top/bottom.
   * Html parsing ought to be done in background ahead of time, rather
-    than when we're about to display an article.
+than when we're about to display an article.
   * Better yet, remove the html parser and find utterances in javascript.
 
 == General Functionality Ideas ==
@@ -37,13 +37,13 @@ carry only summaries.
   * Resume speaking after changing speech rate.
   * Remember the last visited feed.
   * Optional auto-forwarding to the next article would be nice, except
-    nearly all articles have "crap" at the end that you don't really
-    want to listen to.
+nearly all articles have "crap" at the end that you don't really
+want to listen to.
   * Consider having `MEDIA_PREVIOUS` skip back a sentence. Less consistent
-    but more convenient.
+but more convenient.
   * Remember current position in article on orientation change.
   * Ignore automatic screen orientation change: it can be an issue
-    when jogging apparently.
+when jogging apparently.
   * Persistance of articles. And then we can do search.
   * Browse list of article titles.
   * Option to dump an article to sdcard for debugging.
@@ -51,8 +51,8 @@ carry only summaries.
 == Google Reader functionality ==
 
   * Get Google Reader feed by user label. Easy enough, just like
-    FeedsListActivity.
+!FeedsListActivity.
   * Tag articles and feeds: needs UI.
   * Keep read, mark all unread, show unread counts. Control whether to
-    exclude read articles.
+exclude read articles.
   * Sharing.
