Accept the SEARCH button as equivalent to CALL (for phones that have it. Add an on-screen soft button to toggle pause / play at the bottom center of the screen. That space was previously used to show a star icon: TODO: find some other place to show that, for now it's just removed. TalkingWebView.Callback interface gains an onTalking() method to support swaping the button image and text. Bump required SDK version to 3: I think I'm using APIs that require it, and I'm not in a position to test older.

--- a/talkingrss/res/values/strings.xml
+++ b/talkingrss/res/values/strings.xml
@@ -88,4 +88,6 @@ limitations under the License.
     <string name="auto_forward_pref_title">Auto-forward</string>
     <string name="auto_forward_pref_summary_on">When done reading an article, automatically start speaking the next one.</string>
     <string name="auto_forward_pref_summary_off">Require user action to go to the next article.</string>
+    <string name="pause">Pause</string>
+    <string name="play">Play</string>
 </resources>
