--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -13,18 +13,16 @@ carry only summaries.
 == Known Issues ==
 
   * When the app is used soon after waking up the phone, I frequently get !SocketException timeouts. It ought to retry and/or check network availability (seems slightly tricky though). Even when successful, first network request takes disproportionately long.
-  * eSpeak mishandles french accents. In other contexts where I've used eSpeak this has always worked fine, so it's either this version or the way it's built or some encoding problem...
-  * SSML doesn't work for some reason.
   * I see no convenient way to make the settings (!PreferenceActivity) self-voicing.
 
 == Speech-related ideas ==
 
-  * Tag your feeds by language and change TTS language automatically by feed.
+  * Tag your feeds by language and change TTS language automatically by feed. Or just auto-detect language.
   * Make prosody work and use it to denote titles / styles / other markup.
   * Control to navigate to previous/next paragraph, and to top/bottom.
   * Html parsing ought to be done in background ahead of time, rather than when we're about to display an article.
   * Better yet, remove the html parser and find utterances in javascript.
-  * Integrate with the !AccessibilityService on the Android Donut platform.
+  * Integration with the !AccessibilityService to avoid double speaking of some cues.
 
 == General Functionality Ideas ==
 
